# OpenGL

./: .cmake-format.py  .gitignore  CMakeLists.txt  README.md  main.cxx
include/: engine.hxx
src/cxx/: engine.cxx  main.cxx
src/shaders/: fs.txt  vs.txt
